# decision-table

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: login_validation.json  shipping_discount.json
samples/: grade_assignment.csv  insurance_full_featured.csv  insurance_full_featured.json  insurance_risk.csv  login_validation.csv  shipping_discount.csv  traffic_light.csv
src/decision_table/: __init__.py  cli.py  model.py  reduction.py  serialization.py  testing.py  validation.py
src/decision_table/gui/: __init__.py  app.py  dialogs.py  menu.py  table_editor.py
src/decision_table/web/: __init__.py  app.py  components.py  run.py  state.py
src/decision_table/web/assets/: style.css
src/decision_table/web/pages/: editor.py  settings.py
tests/: conftest.py  test_cli.py  test_model.py  test_reduction.py  test_serialization.py  test_testing.py  test_validation.py
