[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-table"
version = "0.2.0"
description = "Decision table editor with validation, logic reduction, constraints, and test generation"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dt = "decision_table.cli:cli"
dt-gui = "decision_table.gui.app:main"
dt-web = "decision_table.web.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
